--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="AssociationScript.js" ></script>
 	<script type="text/javascript" src="DownloadScript.js" ></script>
 	<script type="text/javascript" src="ParserScript.js" ></script>
+	<script type="text/javascript" src="BackwardParserScript.js" ></script>
 </head>
 <body>
 
@@ -19,6 +20,12 @@ Click me to display Date and Time.</button>
 
 <p id="demo"></p>
 
+<button type="button" onclick="document.getElementById('demo2').innerHTML = backParser()">
+Click me to display the backward parsing result.</button>
+
+
+
+<p id="demo2">dadas</p>
 
 <script>
 var f1 = new Feature("a", "mandatory");
@@ -30,18 +37,76 @@ var m1 = new Model("m1");
 m1.addFeature(f1);
 m1.addFeature(f2);
 m1.addFeature(f3);
+m1.addFeature(new Feature("dadada", "mandatory"));
 m1.addAssociation(a1);
 m1.addAssociation(a2);
 
 function tesr(){
    var str = JSON.stringify(m1);
 
- rpl = replaceString(str,m1);
-   downloadContent("testando.txt",rpl);
-   return rpl;
+// rpl = replaceString(str,m1);
+  // downloadContent("testando.txt",rpl);
+   return str;
 }
 
-var json_data = JSON.stringify(m1);
+
+
+function backParser(){
+
+var str = document.getElementById("textArea").value;
+
+var m1 = parseToModel(str);
+var str2 = JSON.stringify(m1);
+
+return str2;
+}
+
+
 </script>
+
+
+<textarea rows="40" cols="100" id="textArea">
+{ "class": "go.GraphLinksModel",
+  "linkLabelKeysProperty": "labelKeys",
+  "nodeDataArray": [ 
+{"key":"Root" },
+{"key":"F1" },
+{"key":"F2" },
+{"key":"F3" },
+{"key":"F4" },
+{"key":"F5" },
+{"key":"F12" },
+{"key":"F13" },
+{"key":"F14" },
+{"key":"F15" },
+{"key":"Root-F1", "category":"LinkLabel" },
+{"key":"Root-F5", "category":"LinkLabel" },
+{"key":"Root-F8", "category":"LinkLabel" },
+{"key":"Root-F12", "category":"LinkLabel" },
+{"key":"F1-F2", "category":"LinkLabel" },
+{"key":"F1-F3", "category":"LinkLabel" },
+{"key":"F1-F4", "category":"LinkLabel" },
+{"key":"F12-F13", "category":"LinkLabel" },
+{"key":"F12-F14", "category":"LinkLabel" },
+{"key":"F12-F15", "category":"LinkLabel" },
+{"key":"Alt1", "category":"LinkLabel" },
+{"key":"Alt2", "category":"LinkLabel" }
+ ],
+  "linkDataArray": [ 
+{"from":"Root", "to":"F1", "labelKeys":[ "Root-F1" ]},
+{"from":"Root", "to":"F5", "labelKeys":[ "Root-F5" ],"category":"optional"},
+{"from":"Root", "to":"F8", "labelKeys":[ "Root-F8" ]},
+{"from":"F1", "to":"F2", "labelKeys":[ "F1-F2" ]},
+{"from":"F1", "to":"F3", "labelKeys":[ "F1-F3" ]},
+{"from":"F1", "to":"F4", "labelKeys":[ "F1-F4" ],"category":"optional"},
+{"from":"F1-F3", "to":"F1-F2", "labelKeys":[ "Alt1" ], "category":"linkToLink"},
+{"from":"Root", "to":"F12", "labelKeys":[ "Root-F12" ],"category":"optional"},
+{"from":"F12", "to":"F13", "labelKeys":[ "F12-F13" ]},
+{"from":"F12", "to":"F14", "labelKeys":[ "F12-F14" ]},
+{"from":"F12", "to":"F15", "labelKeys":[ "F12-F15" ]},
+{"from":"F12-F15", "to":"F12-F13", "labelKeys":[ "Alt2" ], "category":"linkToLink"}
+ ]}
+</textarea>
+
 </body>
 </html> 
