Removing spaces. Finishing parser model to string. :)

--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -16,7 +16,7 @@
 <h2>My First JavaScript</h2>
 
 <button type="button" onclick="document.getElementById('demo').innerHTML = parser()">
-Click me to display teh parsing result.</button>
+Click me to display the parsing result.</button>
 
 <p id="demo"></p>
 
