--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -25,20 +25,32 @@ Click me to display the backward parsing result.</button>
 
 
 
-<p id="demo2">dadas</p>
+<p id="demo2"></p>
 
 <script>
 var f1 = new Feature("a", "mandatory");
-var f2 = new Feature("b", "optional");	
-var f3 = new Feature("c", "mandatory");
+var f2 = new Feature("b", "mandatory");	
+var f3 = new Feature("c", "optional");
+var f4 = new Feature("d", "alternative");
+var f5 = new Feature("e", "alternative");
+var f6 = new Feature("f", "alternative");
 var a1 = new Association(f1,f2);
 var a2 = new Association(f1,f3);
+var a3 = new Association(f2,f4);
+var a4 = new Association(f2,f5);
+var a5 = new Association(f2,f6);
 var m1 = new Model("m1");
 m1.addFeature(f1);
 m1.addFeature(f2);
 m1.addFeature(f3);
+m1.addFeature(f4);
+m1.addFeature(f5);
+m1.addFeature(f6);
 m1.addAssociation(a1);
 m1.addAssociation(a2);
+m1.addAssociation(a3);
+m1.addAssociation(a4);
+m1.addAssociation(a5);
 
 function parser(){
 
