Finished the alternative features. :)

--- a/Protótipo Atlas/sourceAtlasPrototype/js/test.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/js/test.html
@@ -29,12 +29,12 @@ Click me to display the backward parsing result.</button>
 
 <script>
 
-
+/*
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
 var f3 = new Feature("c", "optional");
 var f4 = new Feature("d", "mandatory");
-var f5 = new Feature("e", "optional");
+var f5 = new Feature("e", "alternative");
 var f6 = new Feature("f", "alternative");
 var f7 = new Feature("g", "alternative");
 var f8 = new Feature("h", "alternative");
@@ -61,15 +61,15 @@ m1.addAssociation(a4);
 m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
+*/
 
-/*
 var f1 = new Feature("a", "mandatory");
 var f2 = new Feature("b", "mandatory");	
 var f3 = new Feature("c", "optional");
 var f4 = new Feature("d", "alternative");
 var f5 = new Feature("e", "optional");
 var f6 = new Feature("f", "alternative");
-var f7 = new Feature("g", "optional");
+var f7 = new Feature("g", "alternative");
 var f8 = new Feature("g5", "mandatory");
 var f9 = new Feature("g12", "alternative");
 var a1 = new Association(f1,f2);
@@ -98,7 +98,7 @@ m1.addAssociation(a5);
 m1.addAssociation(a6);
 m1.addAssociation(a7);
 m1.addAssociation(a8);
-*/
+
 
 function parser(){
 
