Implementation of the save.json button, but it is downloading only the json, in the code(index.html).  :)

--- a/Protótipo Atlas/sourceAtlasPrototype/index.html
+++ b/Protótipo Atlas/sourceAtlasPrototype/index.html
@@ -22,7 +22,7 @@
   <!--Top Bar-->
   <div class="topBar">
     <a onclick="" href="javascript:void(0);"><span class="tooltip">Load Model</span><i class="fa fa-upload"></i></a>
-    <a onclick="" href="javascript:void(0);"><span class="tooltip">Save as .json</span><i class="fa fa-save"></i></a>
+    <a onclick= "downloadContent('testando.json',document.getElementById('mySavedModel').innerHTML);" href="javascript:void(0);"><span class="tooltip">Save as .json</span><i class="fa fa-save"></i></a>
     <a onclick="" href="javascript:void(0);"><span class="tooltip">Save as .png</span><i class="fa fa-file-image-o"></i></a>
   </div>
 
